[gd_scene load_steps=29 format=3 uid="uid://d4nvu7718dkl1"]

[ext_resource type="Script" path="res://src/entities/enemies/armadillo/cannon_ball.gd" id="1_ky20b"]
[ext_resource type="Script" path="res://src/entities/enemies/armadillo/states/cannon_ball_state_machine.gd" id="3_frn6m"]
[ext_resource type="PackedScene" uid="uid://xsalxs0jjtgk" path="res://src/game/ui/HealthBar.tscn" id="3_nuueu"]
[ext_resource type="Script" path="res://src/entities/enemies/skeleton/states/SkeletonIdleState.gd" id="5_u8bj5"]
[ext_resource type="Script" path="res://src/entities/enemies/skeleton/states/SkeletonWalkState.gd" id="6_cgsws"]
[ext_resource type="Script" path="res://src/entities/enemies/armadillo/states/cannon_ball_attack_state.gd" id="6_rleha"]
[ext_resource type="Script" path="res://src/entities/enemies/skeleton/states/SkeletonDeadState.gd" id="8_jbgc1"]
[ext_resource type="AudioStream" uid="uid://ccmhixee7sk0s" path="res://assets/sound/sfx/enemies/bat_fly.ogg" id="9_hnpdm"]
[ext_resource type="AudioStream" uid="uid://xe0mv0m0s2jt" path="res://assets/sound/sfx/enemies/bat_death.ogg" id="10_1uv63"]
[ext_resource type="AudioStream" uid="uid://ba0maswo87dlu" path="res://assets/sound/sfx/enemies/bat_hit.ogg" id="11_1kt0o"]
[ext_resource type="AudioStream" uid="uid://ywpbgjt30g3s" path="res://assets/sound/sfx/movement/16_human_walk_stone_2.wav" id="12_me6c4"]
[ext_resource type="AudioStream" uid="uid://bm1p0oyqjo40u" path="res://assets/sound/sfx/enemies/Hiss.wav" id="13_7sbqv"]
[ext_resource type="Texture2D" uid="uid://kvi41n7b5ch7" path="res://assets/textures/enemies/armadillo/cannon_ball_sprite_sheet.png" id="13_u2jhb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xxxip"]
radius = 10.4384
height = 21.6826

[sub_resource type="Animation" id="3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyPivot:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 11)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:collision_mask")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:collision_layer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodyCollision:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.84217e-14, 11)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BodyPivot/AttackArea:collision_mask")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BodyPivot/Body:frame_coords")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("BodyPivot:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_bv3sv"]
resource_name = "attack"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/AttackArea:collision_mask")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1.02837),
"update": 1,
"values": [2]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySfx")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.5308,
"start_offset": 0.0755,
"stream": ExtResource("9_hnpdm")
}],
"times": PackedFloat32Array(0.363144)
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyPivot/Body:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(7, 2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodyPivot:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.5708, 3.14159, 4.71239, 6.28319]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:collision_mask")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:collision_layer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="8"]
resource_name = "die"
length = 0.45
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:collision_mask")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:collision_layer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HealthBar")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hide"
}]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodySfx")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("10_1uv63")
}],
"times": PackedFloat32Array(0)
}
tracks/3/use_blend = true
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodyPivot/Body:frame_coords")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 4), Vector2i(1, 4), Vector2i(2, 4)]
}

[sub_resource type="Animation" id="4"]
resource_name = "idle"
length = 2.0
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.28571),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0)]
}

[sub_resource type="Animation" id="Animation_mvahf"]
resource_name = "react"
length = 0.45
step = 0.1
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodySfx")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("11_1kt0o")
}],
"times": PackedFloat32Array(0.1)
}
tracks/0/use_blend = true
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyPivot/Body:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_wasv5"]
resource_name = "walk"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyCollision:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.84217e-14, 11)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySfx")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.50529,
"start_offset": 0.0,
"stream": ExtResource("12_me6c4")
}, {
"end_offset": 0.50529,
"start_offset": 0.0,
"stream": ExtResource("12_me6c4")
}],
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyPivot/Body:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1)]
}

[sub_resource type="Animation" id="Animation_vrgev"]
resource_name = "start_attack"
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySfx")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("13_7sbqv")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_874dw"]
resource_name = "stop_attack"
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/Body:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(6, 2), Vector2i(5, 2), Vector2i(4, 2), Vector2i(3, 2), Vector2i(2, 2), Vector2i(1, 2), Vector2i(0, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyPivot/AttackArea:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodySfx")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.50529,
"start_offset": 0.0,
"stream": ExtResource("12_me6c4")
}],
"times": PackedFloat32Array(0.571429)
}
tracks/2/use_blend = true
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodyPivot:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:collision_mask")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_rdacd"]
resource_name = "attack_counterclock"
length = 0.6
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyPivot/AttackArea:collision_mask")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1.02837),
"update": 1,
"values": [2]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodySfx")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.5308,
"start_offset": 0.0755,
"stream": ExtResource("9_hnpdm")
}],
"times": PackedFloat32Array(0.363144)
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyPivot/Body:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(7, 2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodyPivot:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -1.5708, -3.14159, -4.71239, -6.28319]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".:collision_mask")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:collision_layer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iidtu"]
_data = {
"RESET": SubResource("3"),
"attack": SubResource("Animation_bv3sv"),
"attack_counterclock": SubResource("Animation_rdacd"),
"die": SubResource("8"),
"idle": SubResource("4"),
"react": SubResource("Animation_mvahf"),
"start_attack": SubResource("Animation_vrgev"),
"stop_attack": SubResource("Animation_874dw"),
"walk": SubResource("Animation_wasv5")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_e6uum"]
atlas = ExtResource("13_u2jhb")
region = Rect2(0, 0, 256, 160)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nx21u"]
radius = 12.6101
height = 25.2203

[sub_resource type="CircleShape2D" id="CircleShape2D_686m0"]
radius = 427.001

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u3rn4"]
radius = 9.0
height = 20.0

[node name="CannonBall" type="CharacterBody2D"]
light_mask = 4
visibility_layer = 4
z_index = 2
position = Vector2(0, -22)
collision_layer = 4
collision_mask = 7
script = ExtResource("1_ky20b")
ACCELERATION = 120.0
max_health = 40
health = 40
experience_reward = 8

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TimeAttacking" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="HealthBar" parent="." node_paths=PackedStringArray("player") instance=ExtResource("3_nuueu")]
offset_left = -21.0
offset_top = -14.0
offset_bottom = -9.0
player = NodePath("..")

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2(2.84217e-14, 11)
rotation = 1.5708
scale = Vector2(1.0538, 1.19912)
shape = SubResource("CapsuleShape2D_xxxip")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_frn6m")
character_path = NodePath("..")
START_STATE = NodePath("Idle")
STATES_LIST = Array[NodePath]([NodePath("Idle"), NodePath("Walk"), NodePath("Attack"), NodePath("Dead")])

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("5_u8bj5")
state_id = "idle"

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("6_cgsws")
state_id = "walk"

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("6_rleha")
state_id = "attack"

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource("8_jbgc1")
state_id = "dead"

[node name="BodyAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iidtu")
}

[node name="FloorRaycasts" type="Node2D" parent="."]

[node name="RightFloorCast" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2(7, 21)
target_position = Vector2(0, 100)

[node name="RightFloorCast2" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2(7, 21)
target_position = Vector2(0, 100)
collision_mask = 16

[node name="LeftFloorCast" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2(-11, 21)
target_position = Vector2(0, 100)

[node name="LeftFloorCast2" type="RayCast2D" parent="FloorRaycasts"]
position = Vector2(-11, 21)
target_position = Vector2(0, 100)
collision_mask = 16

[node name="BodyPivot" type="Node2D" parent="."]
position = Vector2(0, 11)

[node name="Body" type="Sprite2D" parent="BodyPivot"]
position = Vector2(2, -18)
scale = Vector2(1.781, 1.783)
texture = SubResource("AtlasTexture_e6uum")
hframes = 8
vframes = 5

[node name="AttackArea" type="Area2D" parent="BodyPivot"]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyPivot/AttackArea"]
position = Vector2(0, 1)
rotation = 0.849975
shape = SubResource("CapsuleShape2D_nx21u")

[node name="Eyes" type="RayCast2D" parent="."]
position = Vector2(15, 12)
enabled = false
collision_mask = 3

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_686m0")

[node name="BodySfx" type="AudioStreamPlayer2D" parent="."]
pitch_scale = 0.01
max_distance = 1000.0
attenuation = 1.51572
bus = &"ArmadilloSFX"

[node name="CollidingArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollidingArea"]
position = Vector2(0, 13)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_u3rn4")

[node name="DamageSpawn" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -3)

[connection signal="hit" from="." to="StateMachine" method="notify_hit"]
[connection signal="hp_changed" from="." to="HealthBar" method="update"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="TimeAttacking" to="." method="_on_time_attacking_timeout"]
[connection signal="animation_finished" from="BodyAnimations" to="StateMachine" method="_on_body_animations_animation_finished"]
[connection signal="area_entered" from="BodyPivot/AttackArea" to="." method="_on_sword_area_body_entered"]
[connection signal="body_entered" from="BodyPivot/AttackArea" to="." method="_on_sword_area_body_entered"]
[connection signal="body_entered" from="DetectionArea" to="StateMachine" method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="StateMachine" method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="CollidingArea" to="." method="_on_collision"]
